styles/styles.css
html {
  scroll-behavior: smooth;
  /* background-color: #1e1c1c; */
    /* Set the background image */
    background-image: url('/bg-img/galaxy.jpeg');
    /* Set background size and other properties as needed */
    /* background-size: cover; */
    /* background-repeat: no-repeat; */
    /* Optionally, you can set a background color as a fallback */
    /* background-color: #f0f0f0; */
    /* cursor: url('/bg-img/galaxy.jpeg'); */
}

.swiper-button-prev::after,
.swiper-button-next::after {
  color: #282828;
  font-size: 1.5rem !important;
  font-weight: bold;
  padding: 0.5rem 0.875rem;
  border-radius: 100%;
  background-color: #ddd;
}

.swiper-button-prev::after {
  margin-left: 5rem;
}

.swiper-button-next::after {
  margin-right: 5rem;
}

@media only screen and (max-width: 769px) {
  .swiper-button-prev::after {
    margin-left: 1rem;
  }

  .swiper-button-next::after {
    margin-right: 1rem;
  }
}

/* ===== Custom Swiper pagination ===== */
.card-swiper .swiper-pagination-bullets {
  bottom: 0 !important;
}

.swiper-pagination-bullet {
  width: 1rem !important;
  border-radius: 0 !important;
  height: 0.35rem !important;
}

.swiper-pagination-bullet-active {
  background-color: #282828 !important;
}

/* .swiper-slide {
  width: 100% !important;
  margin: auto !important;
} */




.text-gold {
  /* font-size: 36px; */
  /* font-weight: bold; */
  color: transparent; /* Make text transparent */
  background-image: url('/bg-img/gold-bg.jpeg'); /* Replace with your image path */
  background-size: cover; /* Adjust as needed */
  -webkit-background-clip: text; /* Clip text to the background */
  background-clip: text;
}

/* silver-bg */
.text-silver {
  /* font-size: 36px; */
  /* font-weight: bold; */
  color: transparent; /* Make text transparent */
  background-image: url('/bg-img/silver-bg.jpeg'); /* Replace with your image path */
  background-size: cover; /* Adjust as needed */
  -webkit-background-clip: text; /* Clip text to the background */
  background-clip: text;
}

.image-box:hover{
  img {
  animation-name: example;
  animation-duration: 4s;
  }
}
@keyframes example {
  from {transform: scale(1, 1);}
  to {transform: scale(1.1, 1.1);}
}

